// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportsReducer should handle all defined error types: rejected types GET_MERGE_REPORT 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_MERGE_REPORT_REJECTED",
}
`;

exports[`ReportsReducer should handle all defined error types: rejected types GET_REPORT 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_REPORT_REJECTED",
}
`;

exports[`ReportsReducer should handle all defined error types: rejected types GET_REPORTS 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": true,
      "errorMessage": "ERROR",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_REPORTS_REJECTED",
}
`;

exports[`ReportsReducer should handle all defined fulfilled types: fulfilled types GET_MERGE_REPORT 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_MERGE_REPORT_FULFILLED",
}
`;

exports[`ReportsReducer should handle all defined fulfilled types: fulfilled types GET_REPORT 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "reports": Object {
        "test": "success",
      },
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_REPORT_FULFILLED",
}
`;

exports[`ReportsReducer should handle all defined fulfilled types: fulfilled types GET_REPORTS 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
    },
  },
  "type": "GET_REPORTS_FULFILLED",
}
`;

exports[`ReportsReducer should handle all defined pending types: pending types GET_MERGE_REPORT 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_MERGE_REPORT_PENDING",
}
`;

exports[`ReportsReducer should handle all defined pending types: pending types GET_REPORT 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
  },
  "type": "GET_REPORT_PENDING",
}
`;

exports[`ReportsReducer should handle all defined pending types: pending types GET_REPORTS 1`] = `
Object {
  "result": Object {
    "merge": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
    },
    "report": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "reports": Array [],
    },
    "reports": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
    },
  },
  "type": "GET_REPORTS_PENDING",
}
`;
